<resources>
    <string name="app_name">Eli Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="toppings_header">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="email_subject">Just Java order for </string>
    <string name="name">Name: </string>
    <string name="whipped_cream">Add whipped cream </string>
    <string name="chocolate">Add chocolate </string>
    <string name="cinnamon">Add cinnamon </string>
    <string name="caramel">Add caramel </string>
    <string name="quantity">Quantity: </string>
    <string name="price">Total: </string>
</resources>
